--- a/sass/themes/_theme-dark.scss
+++ b/sass/themes/_theme-dark.scss
@@ -6,14 +6,12 @@ body.dark-mode {
 }
 
 body.dark-mode .header {
-    background-color: vars.$dark-flag-box-bg;
-
     &__button {
         color: vars.$dark-text;
     }
 }
 
-body.dark-mode .header__serach {
+body.dark-mode .main__container__header__search-input {
     background-color: vars.$dark-flag-box-bg;
     color: vars.$dark-text;
 
@@ -22,18 +20,18 @@ body.dark-mode .header__serach {
     }
 }
 
-body.dark-mode .header__dropdown {
+body.dark-mode .main__container__header__dropdown__menu {
     background-color: vars.$dark-bg;
     color: vars.$dark-text;
     border-color: vars.$dark-text;
 }
 
-body.dark-mode .part__flags {
+body.dark-mode .main__container__main__part__flags {
     background-color: vars.$dark-flag-box-bg;
 
-    .part__flags__body__title,
-    .part__flags__body__info h3,
-    .part__flags__body__info p {
+    .main__container__main__part__flags__body__title,
+    .main__container__main__part__flags__body__info h3,
+    .main__container__main__part__flags__body__info p {
         color: vars.$dark-text;
     }
 }
